--- a/src/pages/login/login.module.css
+++ b/src/pages/login/login.module.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+.main {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+  align-items: center;
+}
