added question, answers

--- a/src/components/question/question.module.css
+++ b/src/components/question/question.module.css
@@ -1,9 +1,39 @@
 .main {
-  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   background-color: white;
   height: 125px;
-  padding: 10px 25px;
+  border-radius: 10px;
+  cursor: pointer;
+  transition: 0.3s;
+  align-items: center;
+  width: 100%;
+}
+.main:hover {
+  color: rgb(0, 0, 100);
+  background-color: rgb(187, 187, 212);
+}
+.rightContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  margin-right: 15px;
+}
+.main h1 {
+  margin-left: 15px;
+}
+@media only screen and (max-width: 800px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+  .rightContainer {
+    margin: 15px;
+  }
+  .main h1 {
+    margin: 15px;
+  }
 }
