--- a/src/components/answerHeader/answerHeader.module.css
+++ b/src/components/answerHeader/answerHeader.module.css
@@ -1,9 +1,9 @@
 .main {
   background-color: rgb(0, 0, 100);
   color: white;
+  height: 100px;
+  width: 100%;
   display: flex;
-  flex-direction: column;
   justify-content: space-between;
-  align-items: center;
-  margin: 25px 0;
+  align-items: flex-start;
 }
