--- a/src/components/answersBody/answersBody.module.css
+++ b/src/components/answersBody/answersBody.module.css
@@ -3,10 +3,9 @@
   color: white;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   margin: auto;
-  width: 80%;
-  margin-top: 20px;
-  padding-bottom: 50px;
+  width: 1000px;
+  margin-top: 100px;
+  padding: 50px;
 }
