--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -4,16 +4,15 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  position: fixed;
-  top: 0;
+  /* position: fixed;
+  top: 0; */
   width: 100%;
 }
 .navbarWrapper {
-  width: 1100px;
+  width: 1000px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  padding: 0px 30px;
 }
 .logo {
   text-decoration: none;
@@ -21,11 +20,12 @@
   flex-direction: row;
   align-items: center;
   gap: 10px;
-  padding: 0px 25px;
+  padding: 0 20px;
 }
 .logo svg {
   height: 30px;
   fill: white;
+  padding: 25px 0;
 }
 .logo h2 {
   color: white;
@@ -36,12 +36,12 @@
 .content {
   display: flex;
   flex-direction: row;
-  gap: 50px;
   align-items: center;
 }
 .content a {
   text-decoration: none;
   font-size: 18px;
+  margin-right: 20px;
 }
 .login {
   color: white;
@@ -56,7 +56,19 @@
   padding: 7px 21px;
   border-radius: 10px;
   border: none;
+  cursor: pointer;
+  transition: 0.3s;
 }
+.register:hover {
+  color: white;
+  padding: 6px 20px;
+  border: 1px solid rgb(187, 187, 212);
+  font-weight: 400;
+  background-color: rgb(187, 187, 212);
+  cursor: pointer;
+  transition: 0.3s;
+}
+
 .register {
   color: rgb(0, 0, 100);
   background-color: white;
@@ -64,11 +76,15 @@
   border-radius: 10px;
   font-size: 18px;
 }
-.register:hover {
-  color: white;
-  padding: 6px 20px;
-  border-radius: 10px;
-  border: 1px solid rgb(187, 187, 212);
-  font-weight: 400;
-  background-color: rgb(187, 187, 212);
+@media only screen and (max-width: 600px) {
+  .content a {
+    font-size: 12px;
+  }
+  .logo h2 {
+    display: none;
+  }
+  .logo svg {
+    height: 30px;
+    padding: 25px;
+  }
 }
