added responsive design

--- a/src/components/answerForm/answerForm.module.css
+++ b/src/components/answerForm/answerForm.module.css
@@ -28,3 +28,11 @@
   color: white;
   text-decoration: underline;
 }
+@media only screen and (max-width: 800px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    text-align: center;
+  }
+}
