--- a/src/components/answerHeader/answerHeader.module.css
+++ b/src/components/answerHeader/answerHeader.module.css
@@ -7,3 +7,11 @@
   justify-content: space-between;
   align-items: flex-start;
 }
+@media only screen and (max-width: 800px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    align-items: center;
+  }
+}
