--- a/src/components/answersBody/answersBody.module.css
+++ b/src/components/answersBody/answersBody.module.css
@@ -3,9 +3,17 @@
   color: white;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
   margin: auto;
-  width: 1000px;
-  margin-top: 100px;
+  width: 80%;
+  margin-top: 20px;
   padding: 50px;
 }
+/* @media only screen and (max-width: 800px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+} */
