--- a/src/components/questionForm/questionForm.module.css
+++ b/src/components/questionForm/questionForm.module.css
@@ -22,10 +22,17 @@
   text-align: center;
   font-weight: 700;
   text-decoration: none;
-  margin-left: 5px;
   color: rgb(0, 0, 100);
 }
 .main a:hover {
   color: white;
   text-decoration: underline;
+}
+@media only screen and (max-width: 600px) {
+  .main {
+    width: 80%;
+  }
+  .main textarea {
+    width: 80%;
+  }
 }
