--- a/src/components/registerForm/registerForm.module.css
+++ b/src/components/registerForm/registerForm.module.css
@@ -2,7 +2,7 @@
   background-color: rgb(187, 187, 212);
   padding: 25px;
   border-radius: 25px;
-  width: 300px;
+  width: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -24,4 +24,9 @@
 .main a:hover {
   color: white;
   text-decoration: underline;
+}
+@media only screen and (max-width: 600px) {
+  .main {
+    width: 80%;
+  }
 }
