--- a/src/components/questionsList/questionsList.module.css
+++ b/src/components/questionsList/questionsList.module.css
@@ -6,3 +6,59 @@
   margin: auto;
   width: 80%;
 }
+.filtering {
+  margin: 25px 0;
+  width: 100%;
+  display: flex;
+  justify-content: end;
+}
+.filterAnswered {
+  color: rgb(0, 0, 100);
+  background-color: white;
+  border-radius: 10px 0 0 10px;
+  width: 75px;
+  height: 30px;
+  font-size: 12px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.filterAnswered:hover {
+  color: white;
+  background-color: rgb(0, 0, 100);
+  border: 1px solid white;
+}
+.filterUnanswered {
+  color: rgb(0, 0, 100);
+  background-color: white;
+  padding: 7px 0px;
+  width: 80px;
+  height: 30px;
+  font-size: 12px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.filterUnanswered:hover {
+  color: white;
+  background-color: rgb(0, 0, 100);
+  border: 1px solid white;
+}
+.resetFilter {
+  color: rgb(0, 0, 100);
+  background-color: white;
+  border-radius: 0 10px 10px 0;
+  width: 30px;
+  height: 30px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.resetFilter:hover {
+  color: white;
+  background-color: rgb(0, 0, 100);
+  border: 1px solid white;
+}
+@media only screen and (max-width: 800px) {
+  .filtering {
+    justify-content: center;
+  }
+}
