--- a/src/components/answersList/answersList.module.css
+++ b/src/components/answersList/answersList.module.css
@@ -6,7 +6,7 @@
   color: rgb(0, 0, 100);
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: start;
   margin-top: 10px;
   padding: 15px;
   align-items: center;
@@ -15,8 +15,16 @@
 .rightContainer {
   display: flex;
   flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.bottomContainer {
+  display: flex;
+  flex-direction: row;
   align-items: center;
   gap: 10px;
+  justify-content: space-between;
 }
 @media only screen and (max-width: 800px) {
   .content {
