--- a/src/components/molecules/question/question.module.css
+++ b/src/components/molecules/question/question.module.css
@@ -29,6 +29,7 @@
     display: flex;
     flex-direction: column;
     height: 100%;
+    text-align: center;
   }
   .rightContainer {
     margin: 15px;
